commit de prueba dentro del editor de git

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <div class="indexSeguro">
       <div>
         <section class="margenLeft">
-          <h2>Seguros</h2>
+          <h2>Seguros:</h2>
           <p>Estamos para asegurar tanto a usted como a su vehiculo</p>
           <p>
             la responsabilidad de darle seguridad en su dia a dia nos estamos
