commit 4 en local

--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
       <div>
         <section class="margenLeft">
           <h2>Seguros</h2>
-          <p>Estamos para asegurar tanto a usted como a su vehiculo</p>
+          <p>Estamos para asegurar tanto a usted como a sus vehiculos</p>
           <p>
             la responsabilidad de darle seguridad en su dia a dia nos estamos
             adaptando constantesmente a los cambios para traerle todos los
