--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
           <li class="nav-item margenLeft">
             <a class="nav-link" href="./secciones/contacto.html"
-              ><span class="colorRojo">Contacto</span></a
+              ><span class="colorRojo">Contactos</span></a
             >
           </li>
         </ul>
