--- a/secciones/contacto.html
+++ b/secciones/contacto.html
@@ -13,47 +13,77 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Amatic+SC&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../Sass-node/estilos/main.css">
 </head>
 <body class="bodyGrid">
     <body >
     <header>
         <a href="../index.html"><h1 class="tituloMargenes">ASEGURAR</h1></a>
     </header>
-    <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="../index.html"><span class="ref">MENU:</span></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse listaInicio" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                <span class="colorRojo">Planes</span>
-              </a>
-              <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <a class="dropdown-item" href="../secciones/planes.html">Seguros de Autos</a>
-                <a class="dropdown-item" href="../secciones/planesVida.html">Seguro de Vida</a>
-              </div>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../secciones/Institucional.html"><span class="colorRojo">Institucional</span></a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="../secciones/equipo.html"><span class="colorRojo">Equipo</span></a>
-            </li>
-            
-            <li class="nav-item">
-              <a class="nav-link" href="../secciones/contacto.html"><span class="colorRojo">Contacto</span></a>
-            </li>
-          </ul>
-        </div>
-      </nav>
-    <div class="separarForm">
-        <section class="margenLeft">
+    <nav class="navbar navbar-expand-md navbar-light">
+      <a class="navbar-brand" href="../index.html"><span class="ref">MENU:</span></a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div
+        class="collapse navbar-collapse listaInicio navi"
+        id="navbarSupportedContent"
+      >
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item dropdown navi__margen">
+            <a
+              class="nav-link dropdown-toggle"
+              href="#"
+              id="navbarDropdown"
+              role="button"
+              data-toggle="dropdown"
+              aria-haspopup="true"
+              aria-expanded="false"
+            >
+              <span class="navi__color">Planes</span>
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+              <a class="dropdown-item" href="../secciones/planes.html"
+                >Seguros de Autos</a
+              >
+              <a class="dropdown-item" href="../secciones/planesVida.html"
+                >Seguro de Vida</a
+              >
+            </div>
+          </li>
+          <li class="nav-item navi__margen">
+            <a class="nav-link" href="../secciones/Institucional.html"
+              ><span class="navi__color">Institucional</span></a
+            >
+          </li>
+          <li class="nav-item navi__margen">
+            <a class="nav-link" href="../secciones/equipo.html"
+              ><span class="navi__color">Equipo</span></a
+            >
+          </li>
+
+          <li class="nav-item navi__margen">
+            <a class="nav-link" href="../secciones/contacto.html"
+              ><span class="navi__color">Contacto</span></a
+            >
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <div class="division">
+        <section class="division__margen">
             <video src="../Video/Seguro.mp4" width="480" height="360" controls></video>
         </section>
-        <section class="separarAb">
-            <h2 class="colorSub">¿Necesitas una cotizacion?</h2>
+        <section class="division__separador">
+            <h2 class="division__titulo">¿Necesitas una cotizacion?</h2>
             <span>Dejanos tus datos y un asesor se comunicara con usted a la brevedad</span>
             <hr>
             <form action="" method="Get" id="colorBack">
@@ -107,9 +137,9 @@
         </section>
     </div>
     <footer>
-        <div class="footerGrid">
-          <p class="margenLeft cursivas">Nuestra empresa</p>
-          <div class="footerDiv">
+        <div class="footer">
+          <p class="footer__cursiva">Nuestra empresa</p>
+          <div class="footer__div">
             <img
               src="https://image.flaticon.com/icons/png/128/174/174855.png"
               alt="instagram"
